# Satellite

./: .gitignore  CMakeLists.txt  README.md  angles_fullway.cpp  main.cpp  main.py
additional/: stations.json
app/: constants.h
app/rinex/: CycleSlipDetection.cpp  CycleSlipDetection.h  MovingAverage.cpp  MovingAverage.h  Rinex.cpp  Rinex.h  RinexObs.cpp  RinexObs.h
app/sp3/: Projection.cpp  Projection.h  SP3.cpp  SP3.h  utils.h
app/utils/: Angles.h  Files.h  Lagrange.h  Slips.h  Structs.h  Vectors.h
apps/Rinex/: CycleSlipDetection.cpp  CycleSlipDetection.h  RinexParser.cpp  RinexParser.h
apps/SP3/: SP3Parser.cpp  SP3Parser.h  utils.h
apps/helper/: detection.cpp  dfix_example.cpp
apps/utils/: SatelliteAntennaAngle.h
calculations/: first_differences.cpp  vector.cpp
nasa/: ftp_nasa.ipynb
parsers/: rinex.cpp  sp3.cpp
plots/: graph.py
runs/: find_slips.cpp  sp3_projections.cpp  sp3_projections_period.cpp  sp3_read.cpp
scripts/downloads/: config.py  rinex.py  sp3.py
scripts/graphs/: projection.py  trajectory.py
scripts/parsing/: coordinates.py  stations.py  time.py
scripts/requirements/: base.in  base.txt
test_data/: sp3_coords_satellite_day
utils/: path.py  read_files.py  write_files.py
